# pdfMelange

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  distmake.sh  index.html  pdfmelange-xUbuntu_14.04.dsc  pdfmelange-xUbuntu_15.04.dsc  pdfmelange-xUbuntu_16.10.dsc  pdfmelange-xUbuntu_17.04.dsc  pdfmelange.dsc  pdfmelange.spec
Home/: Development.html  Development_Resources.html  Download.html  Installation.html  License.html  Links.html  News.html  Screenshots.html  pdfMelange_for_Windows.html
Home/Development/: build_from_C++_sources.html  build_from_java_sources.html  build_with_minGW.html  links.html
Home/Development_Resources/: build_from_C++_sources.html  build_from_java_sources.html  build_with_minGW.html  code_snippets.html  diagram.dot  links.html
Home/Development_Resources/code_snippets/: Git.html  I18N.html  bash.html  libraries_info.html  package_building.html  patches.html  pdf.html
Home/Development_Resources/code_snippets/bash/: condition_case.html  condition_if.html  function.html  here_document.html  loop_for.html  pipes_and_redirection.html  sed.html  tar.html
Home/Development_Resources/code_snippets/package_building/: package_building_deb.html  package_building_rpm.html
Home/Development_Resources/code_snippets/pdf/: PoDoFo.html  ghostscript.html  pdfHummus.html  pdf_basics.html  poppler.html
Home/Development_Resources/code_snippets/pdf/pdfHummus/: patch.html
Home/Installation/: Linux.html  Windows_-_minGW.html  diagram001.dot  jPDFmelange_for_Java.html  pdfMelange_for_GNUs.html  pdfMelange_for_Windows.html
Home/News/: 2008-06-07_Registered_at_berlios.html  2008-09-08_Version_release_0.2.0.html  2008-10-13_Version-release_0.3.0.html  2008-11-16_Version_release_0.3.1.html  2009-07-19_Version_release_0.3.2.html  2009-09-02_Version_release_0.3.3.html  2014-03-09_Moved_to_GitHub.html  2015-04-05_New_version_0.4.2.html  2017-08-17_New_version_0.4.4.html
debian/: changelog  control  copyright  menu.ex
extra/: pdfmelange.desktop
mingw/: Makefile.in  Makefile.win32  config.h  crossBuild-poppler-win32.sh  get_win32_deps.sh  gtk+-3.10.4-dlls.lst.44  gtk+-3.18.6-i686-dlls.lst  gtk+-3.18.6-x64-dlls.lst  gtk+-3.22.17-x64-dlls.lst  gtk+-3.22.2-x64-dlls.lst  icons.lst  info.rtf  install.txt  launcher-resource.rc  launcher.c  pdfMelange-resource.rc  pdfMelange.iss  pdfMelange.xcf  pdfmelange.ascii  portable_set-up.cc
po/: ChangeLog  POTFILES.in  POTFILES.skip  de.mo  de.po  pdfmelange.pot
src/: Makefile.am  Makefile.in  copyfile.cc  copyfile.h  gtkbuilder2ustring.cc  main.cc  melange.ui  melange.ui-string.h  melange.ui.h  melangeAboutDialog.cc  melangeAboutDialog.h  melangeDrawingArea.cc  melangeDrawingArea.h  melangeKeyFile.cc  melangeKeyFile.h  melangeListStore.cc  melangeListStore.h  melangeLogging.cc  melangeLogging.h  melangePassword.cc  melangePassword.h  melangePdfWriter.cc  melangePdfWriter.h  melangePopplerWriter.cc  melangePopplerWriter.h  melangePreferences.cc  melangePreferences.h  melangePreferences.ui  melangePreferences.ui-string.h  melangePreferences.ui.h  melangePyPdfWriter.cc  melangePyPdfWriter.h  melangeSaveAsDialog.cc  melangeSaveAsDialog.h  melangeTreeView.cc  melangeTreeView.h  melangeWindow.cc  melangeWindow.h  melange_pixbuf-inline.h  pythonPdfWriter.cc  (+1 more)
